--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chart-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Taokhan.github.io/chart-app",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -25,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
